@startuml

title __MODEL's Class Diagram__\n

  namespace com.example.diseaseprediction {
    namespace model {
      class com.example.diseaseprediction.model.Result {
          - confidence : Float
          - id : String
          - title : String
          + Result()
          + compareTo()
          + getConfidence()
          + getId()
          + getTitle()
          + toString()
      }
    }
  }
  

  namespace com.example.diseaseprediction {
    namespace model {
      class com.example.diseaseprediction.model.TextClassificationClient {
          {static} - LABEL_PATH : String
          {static} - MAX_RESULTS : int
          {static} - MODEL_PATH : String
          {static} - PAD : String
          {static} - SENTENCE_LEN : int
          {static} - SIMPLE_SPACE_OR_PUNCTUATION : String
          {static} - START : String
          {static} - TAG : String
          {static} - UNKNOWN : String
          {static} - VOCAL_PATH : String
          - am : AssetManager
          - context : Context
          - dic : Map<String, Integer>
          - fis : InputStream
          - is : InputStream
          - labels : List<String>
          - tflite : Interpreter
          + TextClassificationClient()
          + classify()
          + load()
          + tokenize()
          + tokenize1()
          + unload()
          ~ getDic()
          ~ getLabels()
          ~ getTflite()
          ~ tokenizeInputText()
          - loadDictionaryFile()
          - loadLabelFile()
          - loadModel()
          {static} - loadModelFile()
      }
    }
  }
  

  com.example.diseaseprediction.model.Result .up.|> java.lang.Comparable
  com.example.diseaseprediction.model.TextClassificationClient o-- com.example.diseaseprediction.tokenize.RDRsegmenter : rdRsegmenter
  com.example.diseaseprediction.model.TextClassificationClient o-- com.example.diseaseprediction.tokenize.Vocabulary : vocabulary


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
